# snippets

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: aws_ecr.yml
app/: asgi.py  storages.py  urls.py
app/forms/: widets.py
app/settings/: __init__.py  base.py  dev.py  helpers.py  sentry.py
app/templatetags/: app_tags.py
app/views/: home.py  mixins.py
authentication/: admin.py  forms.py
authentication/tests/: test_forms.py  test_user.py
docs/: admin.py  forms.py  markdown.py  models.py  urls.py  views.py
docs/migrations/: 0001_initial.py  0002_basedoc_tags.py  0003_basedoc_updated_on.py  0004_page_linked_pages.py  0005_basedoc_users.py  0006_basedoc_users_editable.py  0007_alter_page_linked_pages.py
docs/models/: __init__.py  base.py  page.py  snippet.py
docs/templates/docs/: page_detail.html  page_form.html  search.html  snippet_detail.html  snippet_form.html  tag_list.html
docs/templates/docs/partials/: tags.html
docs/templates/docs/tags/: latest_snippet.html
docs/templatetags/: doc_tags.py
docs/views/: __init__.py  page.py  search.py  snippet.py  tag.py
requirements/: base.txt
static/markdownx/js/: markdownx.js
static/scss/: _component-variables.scss  _components.scss  _fonts.scss  _variables.scss  config.json  karma.scss
static/scss/fontello/: config.json
static/scss/fontello/css/: fontello-codes.css  fontello-ie7.css  (+3 more)
static/scss/fonts/: fontello.eot
static/scss/module/: _admonition.scss  _card.scss  _fontello-codes.scss  _fontello-embedded.scss  _fontello-ie7-codes.scss  _fontello-ie7.scss  _fontello.scss  _form.scss  _layout.scss  _login.scss  _pygments.scss  _tags.scss  _utils.scss
templates/: base.html  home.html
templates/partials/: form_field.html  header.html  login.html
templates/registration/: login.html
templates/tags/: latest.html
tests/: settings.py  test_home.py
(+1 files in other folders)
