[project]
name = "app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-autocomplete-light>=3.11.0",
    "django-markdownx>=4.0.7",
    "django-modelcluster>=6.3",
    "django-storages[s3]>=1.14.4",
    "django-taggit>=6.0.0",
    "django>=5.1.1",
    "psycopg[binary]>=3.2.1",
    "pygments>=2.18.0",
    "sentry-sdk>=2.14.0",
    "uvicorn>=0.30.6",
]

[dependency-groups]
dev = [
    "ruff>=0.6.4",
]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "migrations",
    "node_modules"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "F403",  # based on the current code, too many to go through
    "F405",  # based on the current code, too many to go through
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
